# Security-and-Cryptography

./: README.md
Oving-4/oppgave-2/C/: CMakeLists.txt  Replacer  Replacer.c
Oving-4/oppgave-2/Cpp/: CMakeLists.txt  Replacer.cpp
Oving-4/oppgave-2/Rust/replacer_project/: Cargo.toml
Oving-4/oppgave-2/Rust/replacer_project/src/: main.rs
Oving-5/: .gitlab-ci.yml  CMakeLists.txt  Replacer.c  Replacer.h  main.c  test_replacer
Oving-5/C/: CMakeLists.txt  Replacer.c  Replacer.h  fuzzer
Oving-5/C/.github/workflows/: fuzzing.yml
Oving-5/tests/: CMakeLists.txt  replacer_test.c  utility_fuzzer_test.c
